# tap-sunwave

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  test.yml
scripts/: generate_jwt.py
tap_sunwave/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_sunwave/docs/: __init__.py  swagger.json
tap_sunwave/schemas/: billing_report.json  census.json  form.json  opportunity.json  opportunity_timeline.json  referral.json  ur_report.json  user.json
tap_sunwave/streams/: forms.py
tests/: __init__.py  test_auth.py  test_core.py
