[tool.poetry]
name = "tap-sunwave"
version = "0.0.1"
description = "Singer tap for Sunwave, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pat Nadolny <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "Sunwave",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9"
singer-sdk = { version="~=0.47.4", extras = [] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
python-dotenv = "~=1.2.1"
pyjwt = "~=2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.47.4", extras = ["testing"] }
black = "~=25.9.0"
ruff = "~=0.14.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sunwave = 'tap_sunwave.tap:TapSunwave.cli'
