[project]
name = "tap-sunwave"
dynamic = ["version"]
description = "Singer tap for Sunwave, built with the Meltano Singer SDK."
authors = [{ name = "Pat Nadolny", email = "firstname.lastname@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Sunwave",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'backports-datetime-fromisoformat>=2.0.1; python_version<"3.11"',
    "singer-sdk~=0.53.0",
    "requests~=2.32.3",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
s3 = ["s3fs~=2026.1.0"]

[project.scripts]
tap-sunwave = "tap_sunwave.tap:TapSunwave.cli"

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    { include-group = "testing" },
]
testing = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    "backports-datetime-fromisoformat>=2.0.3",
    "mypy>=1.19.1",
    "ty>=0.0.11",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = [
    "hatchling~=1.28.0",
    "hatch-vcs~=0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.pytest]
addopts = [
    "-v",
    "--durations=10",
]
log_level = "INFO"
minversion = "9"

[tool.mypy]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
prerelease = "allow"
required-version = ">=0.9.17"
